# dimreducers-crusher

./: .gitignore  CONTRIBUTING.md  README.md  example.py  plotting.py  reducers.py  requirements.txt  run_single.py  setup.cfg
dimreducers_crusher/crusher/: crusher.py  plotting.py  run_single.py
dimreducers_crusher/datasets/: CovTypeDataset.py  FashionMNISTDataset.py  RPPADataset.py  SwissRollDataset.py  TwentyNewsgroups.py  __init__.py
dimreducers_crusher/metrics/: AbstractMetric.py  DummyMetric.py
dimreducers_crusher/plotters/: AbstractPlotter.py  DefaultPlotter.py  __init__.py
dimreducers_crusher/reducers/: AbstractReducer.py  Chalmer.py  DiffusionMap.py  FA.py  FastICA.py  ForceHybrid.py  ForcePivot.py  GRP.py  GTM.py  H_LLE.py  IPCA.py  Isomap.py  K_PCA_P.py  K_PCA_R.py  K_PCA_S.py  LLE.py  LPP.py  LTSA_LLE.py  LaplacianEigenmaps.py  MDS.py  M_LLE.py  NCVis.py  NMF.py  N_MDS.py  PCA.py  SRP.py  SparsePCA.py  SpringForce.py  TSNE.py  TSVD.py  __init__.py
dimreducers_crusher/utils/: distances.py
src/datasets/: AbstractDataset.py  AbstractDatasetGenerator.py  RandomUniformDatasetGenerator.py
src/metrics/: AbstractMetric.py  DummyMetric.py  __init__.py
src/reducers/: AbstractReducer.py  DummyReducer.py  PCA.py  UMAP.py  __init__.py
src/utils/: __init__.py  py_utils.py
test/: ncvis_test.py
