[metadata]
name = dimreducers_crusher
project_urls =
    Source Code = https://github.com/iggisv9t/dimreducers-crusher
license = Apache-2
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
[files]
packages =
    dimreducers_crusher
[flake8]
# Allow unused imports in __init__.py
per-file-ignores = __init__.py:F401